@@ -1,10 +1,9 @@
 /*
  * Processor.java (weberknecht)
  *
- * Copyright 2010 Patrick Mairif.
+ * Copyright 2010-2012 Patrick Mairif.
  * The program is distributed under the terms of the Apache License (ALv2).
  * 
- * created: 2010-03-19
  * tabstop=4, charset=UTF-8
  */
 package de.highbyte_le.weberknecht.request.processing;
@@ -12,6 +11,7 @@ package de.highbyte_le.weberknecht.request.processing;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
+import de.highbyte_le.weberknecht.request.ContentProcessingException;
 import de.highbyte_le.weberknecht.request.DatabaseCapable;
 import de.highbyte_le.weberknecht.request.actions.ExecutableAction;
 import de.highbyte_le.weberknecht.request.routing.RoutingTarget;
@@ -29,6 +29,7 @@ public interface Processor extends DatabaseCapable {
 	 * @throws ProcessingException
 	 * 		if problems occurs during execution
 	 */
-	public void execute(HttpServletRequest request, HttpServletResponse response, RoutingTarget routingTarget, ExecutableAction action, ProcessingChain chain)
-			throws ProcessingException;
+	public void execute(HttpServletRequest request, HttpServletResponse response, RoutingTarget routingTarget,
+			ExecutableAction action, ProcessingChain chain)
+	throws ProcessingException, ContentProcessingException;
 }
