@@ -2,5 +2,7 @@
 version.weberknecht.major=0
 version.weberknecht.minor=12
 version.weberknecht.patch=0
-version.weberknecht.state=beta
-version.weberknecht.build=458
+version.weberknecht.build=466
+
+#comment or remove the following line in releases
+version.weberknecht.branch=develop
