@@ -1,3 +1,6 @@
+next:
+	- bugfix: HTTP error code of ContentProcessingException is used again. 
+
 0.12.0:
 	- ReqUtil replaced by Router and RoutingTarget
 	- Introducing Areas
